@@ -1,7 +1,7 @@
 # ==========================================================================
 # This module performs unit tests for the GammaLib linalg module.
 #
-# Copyright (C) 2012-2014 Juergen Knoedlseder
+# Copyright (C) 2012-2015 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,15 +17,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # ==========================================================================
-from gammalib import *
-from math import *
+import gammalib
 import os
 
 
 # ===================================== #
 # Test class for GammaLib linalg module #
 # ===================================== #
-class Test(GPythonTestSuite):
+class Test(gammalib.GPythonTestSuite):
     """
     Test class for GammaLib linalg module.
     """
@@ -35,7 +34,7 @@ class Test(GPythonTestSuite):
         Constructor.
         """
         # Call base class constructor
-        GPythonTestSuite.__init__(self)
+        gammalib.GPythonTestSuite.__init__(self)
 
         # Return
         return
@@ -63,7 +62,7 @@ class Test(GPythonTestSuite):
         Test GVector class.
         """
         # Setup vectors
-        vector    = GVector(3)
+        vector    = gammalib.GVector(3)
         vector[0] = 1.0
         vector[1] = 2.0
         vector[2] = 3.0
@@ -165,7 +164,7 @@ class Test(GPythonTestSuite):
         ncols = 5
 
         # Allocate matrix
-        m = GMatrix(nrows, ncols)
+        m = gammalib.GMatrix(nrows, ncols)
 
         # Fill elements
         for i in range(nrows):
@@ -191,7 +190,7 @@ class Test(GPythonTestSuite):
         ncols = 3
 
         # Allocate matrix
-        m = GMatrixSparse(nrows, ncols)
+        m = gammalib.GMatrixSparse(nrows, ncols)
 
         # Fill elements
         for i in range(nrows):
@@ -217,7 +216,7 @@ class Test(GPythonTestSuite):
         ncols = 3
 
         # Allocate matrix
-        m = GMatrixSymmetric(nrows, ncols)
+        m = gammalib.GMatrixSymmetric(nrows, ncols)
 
         # Fill elements
         for i in range(nrows):
