@@ -1,7 +1,7 @@
 # ==========================================================================
 # This module performs unit tests for the GammaLib vo module.
 #
-# Copyright (C) 2014 Juergen Knoedlseder
+# Copyright (C) 2014-2015 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,15 +17,13 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # ==========================================================================
-from gammalib import *
-from math import *
-import os
+import gammalib
 
 
 # ================================= #
 # Test class for GammaLib vo module #
 # ================================= #
-class Test(GPythonTestSuite):
+class Test(gammalib.GPythonTestSuite):
     """
     Test class for GammaLib vo module.
     """
@@ -35,7 +33,7 @@ class Test(GPythonTestSuite):
         Constructor.
         """
         # Call base class constructor
-        GPythonTestSuite.__init__(self)
+        gammalib.GPythonTestSuite.__init__(self)
 
         # Return
         return
@@ -60,7 +58,7 @@ class Test(GPythonTestSuite):
         Test GVOClient class.
         """
         # Allocate GVOClient object
-        client = GVOClient()
+        client = gammalib.GVOClient()
 
         # Return
         return
