@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 0.11.0
 
 Author(s) : Juergen Knoedlseder
 
-16 October 2015
+26 October 2015
 
 
 1. Introduction
